--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -2948,7 +2948,7 @@ span.prefix.radius, label.prefix.radius {
 }
 
 span.postfix, label.postfix {
-  background: #f2f2f2;
+  background: #7F7F7F;
   border-left: none;
   color: #333333;
   border-color: #ecf0f1;
@@ -2977,7 +2977,7 @@ textarea {
   -webkit-appearance: none;
   background-color: white;
   font-family: inherit;
-  border: 2px solid #ecf0f1;
+  border: 2px solid #7F7F7F;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
   color: rgba(0, 0, 0, 0.75);
   display: block;
@@ -3126,7 +3126,7 @@ input[type="file"] {
 
 /* We add basic fieldset styling */
 fieldset {
-  border: 3px solid #ecf0f1;
+  border: 3px solid #7F7F7F;
   padding: 1.25rem;
   margin: 1.125rem 0;
 }
@@ -7430,7 +7430,7 @@ form small.success {
 }
 form span.prefix,
 form span.postfix {
-  border-color: #ecf0f1;
+  border-color: #7F7F7F;
 }
 
 .accordion {
@@ -7509,4 +7509,8 @@ form span.postfix {
 }
 .clearing-thumbs li {
   display: inline;
+}
+
+.styled-select {
+border-color: #7F7F7F;
 }
